Upgrade to Java 22 and add support for Reactor debug agent and blockhound